[package]
name = "rediska"
version = "0.1.0"
authors = ["mbrav <mbrav@protonmail.com>"]
edition = "2021"
description = "An implementation of redis in Rust"
readme = "README.md"
repository = "https://github.com/mbrav/rediska"
license-file = "LICENSE"
categories = ["web-programming::http-server", "asynchronous"]
keywords = ["rust", "async", "tokio", "redis"]

[dependencies]
anyhow = "1.0.59"                               
bytes = "1.2.1"                                   
thiserror = "1.0.32"                             
tokio = { version = "1.21.1", features = ["full"] }
